# testCmake

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  main.h  project_version.cpp  test_version.cpp
